--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "randomhash",
     "description": "Random Hash"
   },
-  "dependencies": [],
-  "devDependencies": []
+  "dependencies": {
+    "js-md5": "^0.7.3"
+  }
 }
